# fullstack

./: .gitignore  .tool-versions  README.databricks.md  README.md  context_file.md  initial_request.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: fullstack_databricks.ipynb  fullstack_local_spark.ipynb
scala/tokenize-email-job/: build.sbt  run-local.sh
scala/tokenize-email-job/src/main/scala/fullstack/jobs/: TokenizeEmailsJob.scala
src/fullstack/: __init__.py  spark_session.py
src/fullstack/jobs/: __init__.py  customers_job.py  email_tokenization.py
src/fullstack/jobs/output/: .part-00000-034b3702-e404-4be1-a263-62b8276f2212-c000.snappy.parquet.crc  .part-00001-034b3702-e404-4be1-a263-62b8276f2212-c000.snappy.parquet.crc  part-00000-034b3702-e404-4be1-a263-62b8276f2212-c000.snappy.parquet  part-00001-034b3702-e404-4be1-a263-62b8276f2212-c000.snappy.parquet
src/fullstack/jobs/output_tokenized/: .part-00000-9ba3eb78-525b-4896-93d2-4e8b8442cc71-c000.snappy.parquet.crc  .part-00001-9ba3eb78-525b-4896-93d2-4e8b8442cc71-c000.snappy.parquet.crc  part-00000-9ba3eb78-525b-4896-93d2-4e8b8442cc71-c000.snappy.parquet  part-00001-9ba3eb78-525b-4896-93d2-4e8b8442cc71-c000.snappy.parquet
tests/: test_customers_output_path.py  test_spark_smoke.py
